--- a/front/src/app/sign-in/signinStyle.module.css
+++ b/front/src/app/sign-in/signinStyle.module.css
@@ -14,7 +14,7 @@
   width: 168px;
   height: 40px;
   left: 600px;
-  top: 50px;
+  top: 70px;
 
   font-style: normal;
   font-weight: 600;
@@ -30,20 +30,20 @@
   box-sizing: border-box;
 
   position: absolute;
-  width: 394px;
-  height: 60px;
-  left: 766px;
-  top: 292px;
+  width: 168px;
+  height: 40px;
+  left: 60px;
+  top: 150px;
 
   background: #F3F3F3;
   border-radius: 5px;
 }
 
 .inputField56 {
-  width: 394px;
-  height: 60px;
-  left: 766px;
-  top: 292px;
+  width: 168px;
+  height: 40px;
+  left: 60px;
+  top: 150px;
 
   background: #F3F3F3;
   border: 1px solid #A26D07;
@@ -56,79 +56,24 @@
   box-sizing: border-box;
 
   position: absolute;
-  width: 394px;
-  height: 60px;
-  left: 766px;
-  top: 352px;
+  width: 168px;
+  height: 40px;
+  left: 60px;
+  top: 200px;
 
   background: #F3F3F3;
   border-radius: 5px;
 }
 
 .inputField57 {
-  width: 394px;
-  height: 60px;
-  left: 766px;
-  top: 352px;
+  width: 168px;
+  height: 40px;
+  left: 60px;
+  top: 200px;
 
   background: #F3F3F3;
   border: 1px solid #A26D07;
   border-radius: 5px;
-}
-
-
-.header {
-  /* 상단바 */
-
-  position: absolute;
-  width: 168px;
-  height: 40px;
-  left: 880px;
-  top: 217px;
-
-}
-
-
-
-.rectangle55 {
-  /* Rectangle 55 로그인버튼 */
-
-  position: absolute;
-  width: 394px;
-  height: 59px;
-  left: 766px;
-  top: 438px;
-
-  background: #A26D07;
-  border-radius: 5px;
-}
-
-.inputField55 {
-  width: 394px;
-  height: 59px;
-  left: 766px;
-  top: 438px;
-
-  background: #F3F3F3;
-}
-
-.loginbutton {
-  /* 로그인 */
-
-  position: absolute;
-  width: 56px;
-  height: 24px;
-  left: 936px;
-  top: 456px;
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
-
-  color: #FFFFFF;
-
 }
 
 .singupbutton {
@@ -154,8 +99,8 @@
   position: absolute;
   width: 56px;
   height: 18px;
-  left: 1021px;
-  top: 532px;
+  left: 844px;
+  top: 220x;
 
   font-style: normal;
   font-weight: 600;
@@ -163,57 +108,4 @@
   line-height: 18px;
 
   color: #000000;
-}
-
-
-.sociallogin {
-  /* 소셜로그인 */
-  /* 간편 회원가입 */
-
-  position: absolute;
-  width: 75px;
-  height: 15.91px;
-  left: 926px;
-  top: 567.09px;
-
-  font-style: normal;
-  font-weight: 700;
-  font-size: 13px;
-  line-height: 16px;
-  /* identical to box height */
-
-  color: #000000;
-
-}
-
-.kakao {
-  /* ri:kakao-talk-fill */
-  position: absolute;
-  width: 55px;
-  height: 51px;
-  left: 843px;
-  top: 598px;
-}
-
-.google {
-  /* flat-color-icons:google */
-
-  position: absolute;
-  width: 55px;
-  height: 48px;
-  left: 938px;
-  top: 601px;
-}
-
-.naver {
-  /* Vector */
-
-  position: absolute;
-  left: 54.09%;
-  right: 43.83%;
-  top: 63.87%;
-  bottom: 32.67%;
-
-  background: #0FA958;
-
 }
