--- a/front/src/app/sign-up/signupStyle.module.css
+++ b/front/src/app/sign-up/signupStyle.module.css
@@ -274,6 +274,11 @@
 
   background: #BEBEBE;
   border-radius: 5px;
+  transition: background-color 0.2s;
+}
+
+.rectangle55:hover {
+  background-color: #A26D07;
 }
 
 .message55 {
@@ -310,6 +315,10 @@
   color: #000000;
 }
 
+.loginbutton:hover {
+  text-decoration: underline;
+}
+
 .FindAccount {
   /* 계정찾기 */
 
@@ -325,6 +334,8 @@
   line-height: 18px;
 
   color: #000000;
+}
 
-
+.FindAccount:hover {
+  text-decoration: underline;
 }
