add signin, signout, findUserID

--- a/front/src/app/sign-up/signupStyle.module.css
+++ b/front/src/app/sign-up/signupStyle.module.css
@@ -11,7 +11,7 @@
   position: absolute;
   width: 168px;
   height: 40px;
-  left: 875px;
+  left: 600px;
   top: 110px;
 }
 
@@ -19,7 +19,7 @@
   position: absolute;
   width: 168px;
   height: 40px;
-  left: 875px;
+  left: 600px;
   top: 110px;
 
   font-style: normal;
@@ -34,7 +34,7 @@
   position: absolute;
   width: 75px;
   height: 25px;
-  left: 922px;
+  left: 650px;
   top: 171px;
 
   font-style: normal;
@@ -54,7 +54,7 @@
   position: absolute;
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 250px;
 
   background: #F3F3F3;
@@ -66,7 +66,7 @@
 .inputField63 {
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 250px;
 
   background: #F3F3F3;
@@ -80,7 +80,7 @@
   position: absolute;
   width: 394px;
   height: 60px;
-  left: 759.5px;
+  left: 500px;
   top: 355.5px;
 
   background: #F3F3F3;
@@ -91,28 +91,10 @@
 .inputField64 {
   width: 394px;
   height: 60px;
-  left: 759.5px;
+  left: 500px;
   top: 355.5px;
 
   background: #F3F3F3;
-}
-
-.errormessage64 {
-  /* 중복된 아이디 입니다. */
-
-  position: absolute;
-  width: 91px;
-  height: 12px;
-  left: 1175px;
-  top: 376px;
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 10px;
-  line-height: 12px;
-
-  color: #DF3030;
 }
 
 .rectangle58 {
@@ -123,7 +105,7 @@
   position: absolute;
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 450px;
 
   background: #F3F3F3;
@@ -135,7 +117,7 @@
 .inputField58 {
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 450px;
 
   background: #F3F3F3;
@@ -147,7 +129,7 @@
   position: absolute;
   width: 206px;
   height: 98px;
-  left: 1170px;
+  left: 500px;
   top: 450px;
 
   background: #F3F3F3;
@@ -155,34 +137,15 @@
 
 }
 
-.errormessage58 {
-  /* 8~16자의 영문 */
-
-  position: absolute;
-  width: 51px;
-  height: 10px;
-  left: 1205px;
-  top: 479px;
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 8px;
-  line-height: 10px;
-  /* identical to box height */
-
-  color: #DF3030;
-}
-
 .rectangle59 {
-  /* Rectangle 59 비밀번호 확인*/
+  /* Rectangle 59 */
 
   box-sizing: border-box;
 
   position: absolute;
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 516px;
 
   background: #F3F3F3;
@@ -194,7 +157,7 @@
 .inputField59 {
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 516px;
 
   background: #F3F3F3;
@@ -205,7 +168,7 @@
   position: absolute;
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 700px;
   color: #DF3030;
 }
@@ -218,7 +181,7 @@
   position: absolute;
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 614px;
 
   background: #F3F3F3;
@@ -230,7 +193,7 @@
 .inputField62 {
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 614px;
 
   background: #F3F3F3;
@@ -239,7 +202,7 @@
 .failed {
   width: 394px;
   height: 60px;
-  left: 761px;
+  left: 500px;
   top: 700px;
 
   font-family: 'Inter';
@@ -257,10 +220,10 @@
   position: absolute;
   width: 394px;
   height: 0px;
-  left: 763px;
+  left: 500px;
   top: 770px;
 
-  border: 1px solid #A26D07;
+  border: 1px solid #a69067;
 
 }
 
@@ -269,8 +232,8 @@
   position: absolute;
   width: 394px;
   height: 59px;
-  left: 763px;
-  top: 830px;
+  left: 500px;
+  top: 805px;
 
   background: #BEBEBE;
   border-radius: 5px;
@@ -286,8 +249,8 @@
   position: absolute;
   width: 394px;
   height: 59px;
-  left: 763px;
-  top: 830px;
+  left: 500px;
+  top: 800px;
 
   font-family: 'Inter';
   font-style: normal;
@@ -304,15 +267,15 @@
   position: absolute;
   width: 42px;
   height: 18px;
-  left: 852px;
-  top: 937px;
+  left: 522px;
+  top: 897px;
 
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 15px;
   line-height: 18px;
 
-  color: #000000;
+  color: #595555;
 }
 
 .loginbutton:hover {
@@ -325,15 +288,15 @@
   position: absolute;
   width: 56px;
   height: 18px;
-  left: 1012px;
-  top: 937px;
+  left: 812px;
+  top: 897px;
 
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 15px;
   line-height: 18px;
 
-  color: #000000;
+  color: #595555;
 }
 
 .FindAccount:hover {
