--- a/front/src/app/findAccount/findAccountStyle.module.css
+++ b/front/src/app/findAccount/findAccountStyle.module.css
@@ -17,7 +17,7 @@
   
   font-style: normal;
   font-weight: 600;
-  font-size: 32px;
+  font-size: 40px;
   line-height: 39px;
 
   color: #A26D07;
@@ -34,6 +34,7 @@
   top: 531px;
   
   border: 1px solid #A26D07; /* 갈색 테두리 설정 */
+  font-size: 35px
 }
 
 .inputField104 {
@@ -57,7 +58,9 @@
   top: 362px;
   
   border: 1px solid #A26D07; /* 갈색 테두리 설정 */
+  font-size: 35px
 }
+
 
 .inputField103 {
   width: 100%;
@@ -70,5 +73,3 @@
   border: none; /* 입력 필드의 기본 테두리 제거 */
   outline: none; /* 입력 필드에 대한 포커스 테두리 제거 */
 }
-
-
