--- a/front/src/app/findUserID/findUserIDStyle.module.css
+++ b/front/src/app/findUserID/findUserIDStyle.module.css
@@ -1,58 +1,153 @@
-.desktop {
-  /* Desktop - 7 */
+/* Desktop - 22 */
+.Desktop{
   position: relative;
-  width: 1930px;
-  height: 952px;
+width: 1920px;
+height: 1080px;
 
-  background: #FFFFFF;
+background: #FFFFFF;
 }
 
-.title {
-  /* 이름 */
+/* Desktop - 22 */
 
+/* 상단바 */
+.topbar {
   position: absolute;
-  width: 168px;
-  height: 40px;
-  left: 600px;
-  top: 80px;
+  width: 413px;
+  height: 126px;
+  left: 819px;
+  top: 204px;
+}
 
+/* 이름 */
+.name {
+  position: absolute;
+  width: 413px;
+  height: 126px;
+  left: 819px;
+  top: 204px;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  font-size: 32px;
-  line-height: 39px;
-
+  font-size: 60px;
+  line-height: 73px;
   color: #A26D07;
 }
 
-.subtitle {
-  /* 이름 */
-
+/* Rectangle 103 */
+.Rectangle103 {
+  box-sizing: border-box;
   position: absolute;
-  width: 168px;
-  height: 40px;
-  left: 645px;
-  top: 150px;
-
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 24px;
-
-  color: #231F20;
+  width: 1042px;
+  height: 518px;
+  left: 495px;
+  top: 342px;
+  border: 1px solid #A26D07;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.rectangle56 {
-  /* Rectangle 56 아이디 */
-
-  box-sizing: border-box;
-
+/* 아이디 찾기 */
+.idFinder {
   position: absolute;
-  width: 168px;
-  height: 40px;
-  left: 570px;
-  top: 220px;
+  width: 231px;
+  height: 75px;
+  left: 83px;
+  top: 47px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+}
 
-  background: #F3F3F3;
-  border-radius: 5px;
-  border-color: #231F20;
+/* 비밀번호 찾기 */
+.passwordFinder {
+  position: absolute;
+  width: 239px;
+  height: 75px;
+  left: 401px;
+  top: 46px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+}
+
+/* Line 13 */
+.line13 {
+  position: absolute;
+  width: 1898.02px;
+  height: 0px;
+  left: 11px;
+  top: 133px;
+  border: 1px solid #A26D07;
+}
+
+/* 회원정보에 등록된 이메일 */
+.registeredEmail {
+  position: absolute;
+  width: 654px;
+  height: 54px;
+  left: 567px;
+  top: 409px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 45px;
+  line-height: 54px;
+  color: #000000;
+}
+
+/* 닉네임 */
+.nickname {
+  position: absolute;
+  width: 158px;
+  height: 76px;
+  left: 561px;
+  top: 513px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+}
+
+/* 이메일 주소 */
+.emailAddress {
+  position: absolute;
+  width: 262px;
+  height: 78px;
+  left: 557px;
+  top: 622px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+}
+
+/* Rectangle 105 */
+.Rectangle105 {
+  box-sizing: border-box;
+  position: absolute;
+  width: 527px;
+  height: 59px;
+  left: 798px;
+  top: 513px;
+  border: 1px solid #A3A3A9;
+}
+
+/* Rectangle 106 */
+.Rectangle106 {
+  box-sizing: border-box;
+  position: absolute;
+  width: 527px;
+  height: 59px;
+  left: 798px;
+  top: 622px;
+  border: 1px solid #A3A3A9;
 }
