--- a/front/src/app/findUserID/findUserIDStyle.module.css
+++ b/front/src/app/findUserID/findUserIDStyle.module.css
@@ -84,11 +84,10 @@ left: 495px;
 top: 342px;
 
 border: 1px solid #A26D07;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
 }
 
-/* 아이디 찾기 */
+/* 아이디 찾기 글씨*/
 .idFinder {
   position: absolute;
   width: 231px;
