--- a/front/src/app/findUserIDresult/findUserIDresultStyle.module.css
+++ b/front/src/app/findUserIDresult/findUserIDresultStyle.module.css
@@ -1,4 +1,4 @@
-/* Desktop - 22 */
+
 .Desktop{
     position: relative;
   width: 1920px;
@@ -25,25 +25,45 @@
   
   }
   
-/* 회원님의 아이디는 yujin****입니다. */
-.letter{
-position: absolute;
-width: 970px;
-height: 43px;
-left: 567px;
-top: 558px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 45px;
-line-height: 54px;
-
-color: #000000;
-
-}
-
-   /* 상단바 */
+  
+  /* 글씨 아이디 찾기 */
+  .findID{
+  position: absolute;
+  width: 231px;
+  height: 75px;
+  left: 115px;
+  top: 83px;
+  
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 48px;
+  
+  color: #000000;
+  
+  }
+  
+  
+  .findPW{
+  position: absolute;
+  width: 239px;
+  height: 90px;
+  left: 447px;
+  top: 83px;
+  
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 48px;
+  
+  color: #000000;
+  
+  }
+  
+  
+  /* 상단바 */
   .topbar {
     position: absolute;
     width: 413px;
@@ -51,7 +71,9 @@ color: #000000;
     left: 819px;
     top: 204px;
   }
-
+  
+ 
+  
   /* 완료 Line 13 ---위에 갈색 라*/
   .line13 {
     position: absolute;
@@ -70,9 +92,31 @@ color: #000000;
     height: 518px;
     left: 455px;
     top: 342px;
-    
     border: 1px solid #A26D07;
    }
     
     
+/* 회원님의 아이디는 yujin****입니다. */
+.notice{
+    position: absolute;
+width: 970px;
+height: 43px;
+left: 567px;
+top: 558px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 45px;
+line-height: 54px;
+
+color: #000000;
+
+}
+
+
+
   
+ 
+  
+ 
