--- a/front/src/app/components/Modal.module.css
+++ b/front/src/app/components/Modal.module.css
@@ -6,12 +6,14 @@
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
+    flex-direction: column;
     justify-content: center; 
+    align-items: center;
     z-index: 9999;
     opacity: 0;
     transition: opacity 0.3s ease;
     overflow: auto; 
-    padding-top:40px;
+    
   }
   
   .modal {
